# story-manager

./: .dockerignore  .flake8  .gitignore  AGENTS.md  Dockerfile  Dockerfile.base  Makefile  README.md  clear_db.py  docker-compose.e2e.yml  docker-compose.yml  main.py  pyproject.toml  run-container.sh  seed_db.py  setup.sh  setupJules.sh  update-base-image.sh
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml  omnivoice-image.yml  preview-image.yml  publish-base-image.yml
backend/: alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_immutable_epub_path_and_processing_.py  0003_rename_div_selectors.py  0004_add_book_notes.py  0005_add_download_status.py  0006_fix_fanficfare_default_selectors.py  0007_add_reader_api_keys_and_content_tracking.py  0008_add_series_index.py  0009_add_book_metadata_sync_fields.py  0010_add_metadata_jobs_matches_and_proposals.py  0011_add_user_genre_tags_to_books.py  0012_add_series_metadata.py  0013_add_on_delete_to_book_related_fks.py  0014_add_scheduler_settings.py  0015_add_source_tags_to_books.py  0016_add_refresh_status_to_books.py  0017_allow_multiple_metadata_match_candidates.py  0018_audiobook_pipeline.py  0019_audiobook_pipeline_controls.py  0020_audiobook_observability.py  0021_series_roster_and_chapter_previews.py  0022_provider_neutral_tts.py  0023_reader_audiobook_publication.py  cf65e060276d_add_immutable_epub_path_and_processing_.py
backend/app/: admin_auth_middleware.py  auth.py  cleaning.py  config.py  crud.py  database.py  epub_editor.py  errors.py  logging_config.py  main.py  middleware.py  models.py  personal.ini  schemas.py  upload_validation.py
backend/app/crud/: __init__.py  api_keys.py  audiobook.py  books.py  cleaning.py  logs.py  metadata.py  reader.py  scheduler_settings.py  series.py
backend/app/routers/: api_keys.py  audiobook.py  auth.py  books.py  cleaning.py  covers.py  metadata.py  opds.py  reader.py  scheduler.py  storage.py  upload.py  web_novels.py
backend/app/services/: audiobook_assembly.py  audiobook_ingestion.py  audiobook_llm.py  audiobook_publication.py  audiobook_queue.py  audiobook_tts.py  catalog.py  chapter_history.py  cover_images.py  epub_utils.py  fanficfare_config.py  library_paths.py  metadata_jobs.py  metadata_sync.py  metadata_sync_queue.py  refresh_queue.py  series.py  tts_providers.py  update_scheduler.py  web_import_queue.py  web_novel.py
backend/app/services/cover_collectors/: __init__.py  royalroad.py  scribblehub.py
backend/tests/: conftest.py  test_audiobook_pipeline.py  test_auth.py  test_cover_collectors.py  test_crud_modules.py  test_epub_editor.py  test_epub_utils.py  test_errors_and_health.py  test_integration_royalroad.py  test_main.py  test_omnivoice_adapter.py  test_reader_audiobook.py  test_refresh_queue.py  test_scheduler.py  test_tts_providers.py  test_upload_validation.py  test_web_novel_service.py
docs/: AUDIOBOOK_PIPELINE.md  READER_AUDIOBOOK_INTEGRATION.md  deployment.md  development.md  reader-api.md  reverse-proxy.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  test.epub  vite.config.js
frontend/playwright-report/: index.html
frontend/src/: App.css  App.jsx  App.test.jsx  index.css  main.jsx  test-utils.jsx
frontend/src/api/: audiobook.js  auth.js  books.js  cleaning.js  client.js  covers.js  metadata.js  series.js
frontend/src/components/: AddBook.jsx  AddBook.test.jsx  AdminLogin.jsx  AudiobookPipeline.jsx  AudiobookPipeline.test.jsx  AudiobookSettings.jsx  AudiobookSettings.test.jsx  BookList.jsx  BookSettings.jsx  BookSettings.test.jsx  BookSettingsChapters.jsx  BookSettingsChapters.test.jsx  CleaningConfigs.jsx  EpubEditor.jsx  EpubEditor.test.jsx  Logs.jsx  ReaderKeys.jsx  SchedulerStatus.jsx  SchedulerStatus.test.jsx  StorageCleanup.jsx  Utilities.jsx  Utilities.test.jsx
frontend/src/hooks/: useDebouncedValue.js  useLibraryCatalog.js
frontend/src/lib/: catalogGrouping.js  catalogGrouping.test.js  chapterHtml.js  navigation.js
frontend/test-results/: .last-run.json
frontend/tests/: setup.js
frontend/tests-e2e/: EpubEditor.spec.js  example.spec.js  example.spec.ts
services/: __init__.py
services/omnivoice/: Dockerfile  README.md  __init__.py  prompt.py  pyproject.toml  server.py
(+17 files in other folders)
