[project]
name = "story-manager"
version = "0.1.0"
description = "A self-hosted digital library and reader for your personal collection of EPUBs and web novels."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "psycopg[binary]==3.2.9",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.13.4",
    "Brotli==1.1.0",
    "certifi==2025.8.3",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudscraper==1.2.71",
    "ebooklib==0.18",
    "FanFicFare==4.48.0",
    "fastapi==0.116.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "requests-file==2.1.0",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.43",
    "starlette==0.47.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "webencodings==0.5.1",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.21.0",
    "httpx==0.28.1",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-mock==3.14.1",
    "flake8==7.1.0",
    "black==25.1.0",
    "autoflake==2.3.1",
]

[tool.setuptools]
packages = ["backend"]

[tool.black]
line-length = 127

[tool.flake8]
max-line-length = 127
