[project]
name = "story-manager"
version = "0.1.0"
description = "A self-hosted digital library and reader for your personal collection of EPUBs and web novels."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "psycopg[binary]==3.3.3",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "apscheduler==3.11.2",
    "beautifulsoup4==4.14.3",
    "brotli==1.2.0",
    "certifi==2026.2.25",
    "chardet==7.4.3",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "cloudscraper==1.2.71",
    "ebooklib==0.20",
    "fanficfare==4.56.0",
    "fastapi==0.139.0",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx2==2.5.0",
    "mutagen>=1.47,<2",
    "idna==3.18",
    "lxml==6.1.1",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "requests-file==3.0.1",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "spacy>=3.7,<4",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "sqlalchemy==2.0.49",
    "starlette==1.3.1",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "uvicorn==0.44.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "webencodings==0.5.1",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.22.1",
    "iniconfig==2.3.0",
    "packaging==26.1",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "flake8==7.3.0",
    "black==26.3.1",
    "autoflake==2.3.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require network access (deselect with '-m not integration')",
]

[tool.setuptools]
packages = ["backend"]

[tool.black]
line-length = 127
target-version = ["py313"]

[tool.flake8]
max-line-length = 127
