[project]
name = "story-manager-omnivoice-adapter"
version = "0.1.0"
description = "Local official OmniVoice adapter for Story Manager"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "numpy==2.4.6",
    "omnivoice==0.2.0",
    "pydub==0.25.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "uvicorn[standard]==0.51.0",
]

[tool.uv]
package = false
constraint-dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
]
